# opensips-client

./: Cargo.toml
examples/: testing.rs
src/: events.rs  lib.rs
